add pg correlate

--- a/web/pizzeria.html
+++ b/web/pizzeria.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!--pagina delle impostazioni di zalando-->
 <html>
 
 <head>
@@ -7,7 +6,7 @@
     <title>Pizzeria</title>
 </head>
 
-<body
+<body>
     style="padding: 20px; max-width: 1000px; margin:auto; border-color: black; border-style: solid; background: white;">
     <h1 style="text-align: center;">L'ISOLA DELLA PIZZA</h1>
     <div style="float: right; display: block;">
