--- a/web/curriculum.html
+++ b/web/curriculum.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!--pagina delle impostazioni di zalando-->
 <html>
 
 <head>
@@ -7,7 +6,7 @@
     <title>Curriculum</title>
 </head>
 
-<body
+<body>
     style="padding: 20px; max-width: 1000px; margin:auto; border-color: black; border-style: solid; background: white;">
 
 
