--- a/web/curriculum versione 1/pag2.html
+++ b/web/curriculum versione 1/pag2.html
@@ -21,14 +21,19 @@
         </div>
     </div>
     <p style="clear: both; "></p>
-    <br>
+    
+    <br><br><br><br><br><br>
 
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
+    <div style="float: left; margin-right: 50px; margin-left: 30px; text-align: right; display: block;">
+        <b><p>ANNO</p></b>
+        <b><p>ISTITUTO</p></b>
+        <b><p>SEZIONE</p></b>
+    </div>
+    <div style="float: left; display: block;">
+        <p>2014/2019</p>
+        <p>ITT Cesena</p>
+        <p>Informatica</p>
+    </div>
 
 
 </body>
