--- a/web/curriculum versione 1/pag6.html
+++ b/web/curriculum versione 1/pag6.html
@@ -13,7 +13,7 @@
     <div style="position:fixed;width:100%;">
         <div style="float:right; background-color: white; margin-right: 15px;">
             <a href="pag1.html">Informazioni Personali</a>
-            <a href="pag2.html" >Formazione Scolastica</a>
+            <a href="pag2.html">Formazione Scolastica</a>
             <a href="pag3.html">Esperienze Lavorative</a>
             <a href="pag4.html">Hobby</a>
             <a href="pag5.html">Informazioni Utili</a>
@@ -21,15 +21,32 @@
         </div>
     </div>
     <p style="clear: both; "></p>
-    <br>
 
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
+    <br><br><br><br><br><br>
 
+    <div style="margin: 30px;">
+        <div style="float: right;  width: 50%; display: block;">
+            <p>Il sottoscritto Cavalluzzo Andrea, <br> ai sensi del D. Lgs. 196/2003 sulla riservatezza dei dati
+                personali,
+                dichiara di essere stato compiutamente informato delle finalità e modalità del trattamento dei dati
+                personali consapevolmente forniti nel presente
+                curriculum e di autorizzarne l’utilizzo e l’archiviazione in banca dati.
+            </p>
+        </div>
+        <p style="clear: both; "></p>
+        <br><br><br>
+        <div>
+            <div style="float: left; display: block; text-align: center; width: 50%;">
+                <h3>Luogo e Data</h3>
+                <p>San Mauro Pascoli, 20 Novembre 2020</p>
+            </div>
+            <div style="float: right; display: block; text-align: center; width: 50%;">
+                <h3>Firma</h3>
+                <p>Andrea Cavalluzzo</p>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 
