--- a/web/curriculum versione 1/pag1.html
+++ b/web/curriculum versione 1/pag1.html
@@ -21,15 +21,38 @@
         </div>
     </div>
     <p style="clear: both; "></p>
-    <br>
 
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
+    <br><br><br><br><br><br>
 
+    <div style="margin:15px">
+
+        <div style="float:left;">
+
+            <h1 style="text-align: center;">Andrea Cavalluzzo</h1>
+
+            <div style="float: left; margin-right: 50px; margin-left: 30px; text-align: right; display: block;">
+                <b><p>INDIRIZZO</p></b>
+                <b><p>NAZIONALITA'</p></b>
+                <b><p>DATA DI NASCITA</p></b>
+                <b><p>TELEFONO</p></b>
+                <b><p>E-MAIL</p></b>
+                <b><p>PATENTE</p></b>
+            </div>
+            <div style="float: left; display: block;">
+                <p>Via da Barignano 137, San Mauro Pascoli, (FC), 47030</p>
+                <p>Italiana</p>
+                <p>15/09/2000, Cesena, (FC)</p>
+                <p>3498841305</p>
+                <p>andrea.cavalluzzo.stud@fitstic.com</p>
+                <p>B</p>
+            </div>
+        </div>
+
+        <div style="float:right;">
+            <img src="img1.jpg" width="500px">
+        </div>
+
+    </div>
 
 </body>
 
