--- a/web/curriculum versione 1/pag3.html
+++ b/web/curriculum versione 1/pag3.html
@@ -21,14 +21,25 @@
         </div>
     </div>
     <p style="clear: both; "></p>
-    <br>
+    
+    <br><br><br><br><br><br>
 
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
-    <img src="img1.jpg" style="width: 300px;"><br>
-    <img src="img2.jpg" style="width: 300px;"><br>
-    <img src="img3.jpg" style="width: 300px;"><br>
+    <div style="float: left; margin-right: 50px; margin-left: 30px; text-align: right; display: block;">
+        <b><p>DATA</p></b>
+        <b><p>SEDE</p></b>
+        <b><p>TIPO</p></b>
+        <b><p>ATTIVITA' SVOLTA</p></b>
+    </div>
+    <div style="float: left; display: block;">
+        <p>03/12/2018 - 22/12/2018</p>
+        <p>AUSL Romagna, Cesena (Italia)</p>
+        <p>Stage Alternanza Scuola lavoro</p>
+        <ul>
+            <li> Assistenza tecnica</li>
+            <li> Assemblaggio pc</li>
+        </ul>
+    </div>
+    
 
 
 </body>
