--- a/web/pizzeria.html
+++ b/web/pizzeria.html
@@ -7,14 +7,10 @@
 </head>
 
 <body>
-    style="padding: 20px; max-width: 1000px; margin:auto; border-color: black; border-style: solid; background: white;">
     <h1 style="text-align: center;">L'ISOLA DELLA PIZZA</h1>
     <div style="float: right; display: block;">
         <br>
-        <p>Via Cesenatico 2144 <br>
-            Ponte Pietra di Cesena <br>
-            Consegne a domicilio <br>
-            Tel. 0547 385 352</p>
+        <p>Via Cesenatico 2144 <br> Ponte Pietra di Cesena <br> Consegne a domicilio <br> Tel. 0547 385 352</p>
     </div>
     <p style="clear: both; "></p>
 
@@ -50,10 +46,10 @@
                 <li>€5,00</li>
                 <li>€7,50</li>
                 <li>€7,50</li>
-            </ul>            
-        </div>        
+            </ul>
+        </div>
     </div>
-    
+
     <div style="float: left; width: 333px; display: block;">
         <h4>SPECIALI</h4>
         <div style="float: left;">
